# Policy-Optimization

./: .gitignore  AGENTS.md  BOOKMARK_LOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: tests.yml
reports/: benchmark-impact-2026-03-23.md  benchmark-impact-multiseed-2026-03-23.md  hermes3_8b_sota_track_h24_2026-03-23.jsonl  hermes3_8b_sota_track_h24_2026-03-23.md  llama32_3b_real_h8_2026-03-23_clean.jsonl  llama32_3b_real_h8_2026-03-23_clean.md  qwen_0.5b_benchmark_2026-03-23_v2.jsonl  qwen_0.5b_benchmark_long_h10_2026-03-23.jsonl  qwen_0.5b_benchmark_long_h10_2026-03-23.md  qwen_0.5b_benchmark_multiseed_2026-03-23.jsonl  qwen_0.5b_smoke.jsonl  qwen_3b_gsm8k_h24_2026-03-23.errors.jsonl  qwen_3b_gsm8k_h24_2026-03-23.jsonl  qwen_3b_gsm8k_h24_2026-03-23.md  qwen_7b_benchmark_real_h8_2026-03-23.jsonl  qwen_7b_benchmark_real_h8_2026-03-23.md  qwen_7b_gsm8k_h24_2026-03-23.errors.jsonl  qwen_7b_gsm8k_h24_2026-03-23.jsonl  qwen_7b_gsm8k_h24_2026-03-23.md  qwen_7b_sota_track_h24_2026-03-23.jsonl  qwen_7b_sota_track_h24_2026-03-23.md  smoke-2026-03-23.md
src/policy_optimization/: __init__.py  adapters.py  advantages.py  filtering.py  gpu.py  hf.py  ops.py  precision.py  rewards.py  types.py  vlm.py
src/policy_optimization/driving/: __init__.py  drivingvqa.py  image_ops.py  rewards.py
tasks/: lessons.md  todo.md
tests/: test_adapters.py  test_advantages.py  test_benchmark_matrix.py  test_driving.py  test_filtering.py  test_losses.py  test_precision.py  test_rewards.py  test_rollout_trainer.py  test_smoke_train_dataset.py  test_trainer.py
(+17 files in other folders)
